improve UI, translation, etc.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../memo/通用/弈仙Memo2.0.0/弈仙Memo.exe"
+export_path="../../../../../../../YiXianMemo/弈仙Memo.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
