many many changes

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -34,7 +34,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="res://Assets/PIC/catsoul.ico"
+application/icon="uid://bq6tfhskcvsks"
 application/console_wrapper_icon="res://Assets/PIC/catsoul.ico"
 application/icon_interpolation=4
 application/file_version=""
